mini_l.output
Terminals unused in grammar

   UMINUS


Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: function functions
    3          | epsilon

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations SEMICOLON END_PARAMS BEGIN_LOCALS declarations SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    5 declarations: declaration SEMICOLON declarations
    6             | epsilon

    7 declaration: IDENT COMMA statements
    8            | IDENT COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | IDENT COLON INTEGER

   10 statements: statement SEMICOLON statements
   11           | epsilon

   12 statement: var ASSIGN expression
   13          | IF bool_expr THEN statements ENDIF
   14          | IF bool_expr THEN statements ELSE statements ENDIF
   15          | WHILE bool_expr BEGINLOOP statements ENDLOOP
   16          | DO BEGINLOOP statements ENDLOOP WHILE bool_expr
   17          | READ vars
   18          | WRITE vars
   19          | CONTINUE
   20          | RETURN expression

   21 bool_expr: relation_and_expr
   22          | relation_and_expr OR relation_and_expr

   23 relation_and_expr: relation_expr
   24                  | relation_expr AND relation_expr

   25 relation_expr: expression comp expression
   26              | TRUE
   27              | FALSE
   28              | L_PAREN bool_expr R_PAREN
   29              | NOT expression comp expression
   30              | NOT TRUE
   31              | NOT FALSE
   32              | NOT L_PAREN bool_expr R_PAREN

   33 comp: EQ
   34     | NEQ
   35     | LT
   36     | GT
   37     | LTE
   38     | GTE

   39 expression: multiplicative_expr
   40           | multiplicative_expr SUB multiplicative_expr
   41           | multiplicative_expr ADD multiplicative_expr

   42 expressions: expression COMMA expressions
   43            | epsilon

   44 multiplicative_expr: term
   45                    | term MOD term
   46                    | term DIV term
   47                    | term MULT term

   48 term: IDENT L_PAREN expression R_PAREN
   49     | NUMBER
   50     | var
   51     | L_PAREN expressions R_PAREN
   52     | SUB NUMBER
   53     | SUB var
   54     | SUB L_PAREN expressions R_PAREN

   55 var: IDENT
   56    | IDENT L_SQUARE_BRACKET expression R_SQUARE_BRACKET

   57 vars: var COMMA vars
   58     | epsilon

   59 epsilon: %empty
   60        | ";"


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION <myType> (258) 4
BEGIN_PARAMS <myType> (259) 4
END_PARAMS <myType> (260) 4
BEGIN_LOCALS <myType> (261) 4
END_LOCALS <myType> (262) 4
BEGIN_BODY <myType> (263) 4
END_BODY <myType> (264) 4
INTEGER <myType> (265) 8 9
ARRAY <myType> (266) 8
OF <myType> (267) 8
IF <myType> (268) 13 14
THEN <myType> (269) 13 14
ENDIF <myType> (270) 13 14
ELSE <myType> (271) 14
WHILE <myType> (272) 15 16
DO <myType> (273) 16
BEGINLOOP <myType> (274) 15 16
ENDLOOP <myType> (275) 15 16
CONTINUE <myType> (276) 19
READ <myType> (277) 17
WRITE <myType> (278) 18
AND <myType> (279) 24
OR <myType> (280) 22
NOT <myType> (281) 29 30 31 32
TRUE <myType> (282) 26 30
FALSE <myType> (283) 27 31
RETURN <myType> (284) 20
IDENT <myType> (285) 4 7 8 9 48 55 56
COLON <myType> (286) 8 9
SEMICOLON <myType> (287) 4 5 10
COMMA <myType> (288) 7 42 57
NUMBER <myType> (289) 8 49 52
ASSIGN (290) 12
NEQ (291) 34
EQ (292) 33
GTE (293) 38
GT (294) 36
LTE (295) 37
LT (296) 35
SUB (297) 40 52 53 54
ADD (298) 41
MOD (299) 45
DIV (300) 46
MULT (301) 47
UMINUS (302)
L_SQUARE_BRACKET (303) 8 56
R_SQUARE_BRACKET (304) 8 56
L_PAREN (305) 28 32 48 51 54
R_PAREN (306) 28 32 48 51 54
";" (307) 60


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program <myType> (54)
    on left: 1, on right: 0
functions <myType> (55)
    on left: 2 3, on right: 1 2
function <myType> (56)
    on left: 4, on right: 2
declarations <myType> (57)
    on left: 5 6, on right: 4 5
declaration <myType> (58)
    on left: 7 8 9, on right: 5
statements <myType> (59)
    on left: 10 11, on right: 4 7 10 13 14 15 16
statement <myType> (60)
    on left: 12 13 14 15 16 17 18 19 20, on right: 10
bool_expr <myType> (61)
    on left: 21 22, on right: 13 14 15 16 28 32
relation_and_expr <myType> (62)
    on left: 23 24, on right: 21 22
relation_expr <myType> (63)
    on left: 25 26 27 28 29 30 31 32, on right: 23 24
comp <myType> (64)
    on left: 33 34 35 36 37 38, on right: 25 29
expression <myType> (65)
    on left: 39 40 41, on right: 12 20 25 29 42 48 56
expressions <myType> (66)
    on left: 42 43, on right: 42 51 54
multiplicative_expr <myType> (67)
    on left: 44 45 46 47, on right: 39 40 41
term <myType> (68)
    on left: 48 49 50 51 52 53 54, on right: 44 45 46 47
var <myType> (69)
    on left: 55 56, on right: 12 50 53 57
vars <myType> (70)
    on left: 57 58, on right: 17 18 57
epsilon (71)
    on left: 59 60, on right: 3 6 11 43 58


State 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1
    ";"       shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    program    go to state 3
    functions  go to state 4
    function   go to state 5
    epsilon    go to state 6


State 1

    4 function: FUNCTION . IDENT SEMICOLON BEGIN_PARAMS declarations SEMICOLON END_PARAMS BEGIN_LOCALS declarations SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    IDENT  shift, and go to state 7


State 2

   60 epsilon: ";" .

    $default  reduce using rule 60 (epsilon)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: functions .

    $default  reduce using rule 1 (program)


State 5

    2 functions: function . functions

    FUNCTION  shift, and go to state 1
    ";"       shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    functions  go to state 9
    function   go to state 5
    epsilon    go to state 6


State 6

    3 functions: epsilon .

    $default  reduce using rule 3 (functions)


State 7

    4 function: FUNCTION IDENT . SEMICOLON BEGIN_PARAMS declarations SEMICOLON END_PARAMS BEGIN_LOCALS declarations SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 10


State 8

    0 $accept: program $end .

    $default  accept


State 9

    2 functions: function functions .

    $default  reduce using rule 2 (functions)


State 10

    4 function: FUNCTION IDENT SEMICOLON . BEGIN_PARAMS declarations SEMICOLON END_PARAMS BEGIN_LOCALS declarations SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    BEGIN_PARAMS  shift, and go to state 11


State 11

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS . declarations SEMICOLON END_PARAMS BEGIN_LOCALS declarations SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    IDENT  shift, and go to state 12
    ";"    shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    declarations  go to state 13
    declaration   go to state 14
    epsilon       go to state 15


State 12

    7 declaration: IDENT . COMMA statements
    8            | IDENT . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | IDENT . COLON INTEGER

    COLON  shift, and go to state 16
    COMMA  shift, and go to state 17


State 13

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations . SEMICOLON END_PARAMS BEGIN_LOCALS declarations SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 18


State 14

    5 declarations: declaration . SEMICOLON declarations

    SEMICOLON  shift, and go to state 19


State 15

    6 declarations: epsilon .

    $default  reduce using rule 6 (declarations)


State 16

    8 declaration: IDENT COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | IDENT COLON . INTEGER

    INTEGER  shift, and go to state 20
    ARRAY    shift, and go to state 21


State 17

    7 declaration: IDENT COMMA . statements

    IF        shift, and go to state 22
    WHILE     shift, and go to state 23
    DO        shift, and go to state 24
    CONTINUE  shift, and go to state 25
    READ      shift, and go to state 26
    WRITE     shift, and go to state 27
    RETURN    shift, and go to state 28
    IDENT     shift, and go to state 29
    ";"       shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    statements  go to state 30
    statement   go to state 31
    var         go to state 32
    epsilon     go to state 33


State 18

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations SEMICOLON . END_PARAMS BEGIN_LOCALS declarations SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    END_PARAMS  shift, and go to state 34


State 19

    5 declarations: declaration SEMICOLON . declarations

    IDENT  shift, and go to state 12
    ";"    shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    declarations  go to state 35
    declaration   go to state 14
    epsilon       go to state 15


State 20

    9 declaration: IDENT COLON INTEGER .

    $default  reduce using rule 9 (declaration)


State 21

    8 declaration: IDENT COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 36


State 22

   13 statement: IF . bool_expr THEN statements ENDIF
   14          | IF . bool_expr THEN statements ELSE statements ENDIF

    NOT      shift, and go to state 37
    TRUE     shift, and go to state 38
    FALSE    shift, and go to state 39
    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 43

    bool_expr            go to state 44
    relation_and_expr    go to state 45
    relation_expr        go to state 46
    expression           go to state 47
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 23

   15 statement: WHILE . bool_expr BEGINLOOP statements ENDLOOP

    NOT      shift, and go to state 37
    TRUE     shift, and go to state 38
    FALSE    shift, and go to state 39
    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 43

    bool_expr            go to state 51
    relation_and_expr    go to state 45
    relation_expr        go to state 46
    expression           go to state 47
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 24

   16 statement: DO . BEGINLOOP statements ENDLOOP WHILE bool_expr

    BEGINLOOP  shift, and go to state 52


State 25

   19 statement: CONTINUE .

    $default  reduce using rule 19 (statement)


State 26

   17 statement: READ . vars

    IDENT  shift, and go to state 29
    ";"    shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    var      go to state 53
    vars     go to state 54
    epsilon  go to state 55


State 27

   18 statement: WRITE . vars

    IDENT  shift, and go to state 29
    ";"    shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    var      go to state 53
    vars     go to state 56
    epsilon  go to state 55


State 28

   20 statement: RETURN . expression

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    expression           go to state 58
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 29

   55 var: IDENT .
   56    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 59

    $default  reduce using rule 55 (var)


State 30

    7 declaration: IDENT COMMA statements .

    $default  reduce using rule 7 (declaration)


State 31

   10 statements: statement . SEMICOLON statements

    SEMICOLON  shift, and go to state 60


State 32

   12 statement: var . ASSIGN expression

    ASSIGN  shift, and go to state 61


State 33

   11 statements: epsilon .

    $default  reduce using rule 11 (statements)


State 34

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations SEMICOLON END_PARAMS . BEGIN_LOCALS declarations SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    BEGIN_LOCALS  shift, and go to state 62


State 35

    5 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 5 (declarations)


State 36

    8 declaration: IDENT COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 63


State 37

   29 relation_expr: NOT . expression comp expression
   30              | NOT . TRUE
   31              | NOT . FALSE
   32              | NOT . L_PAREN bool_expr R_PAREN

    TRUE     shift, and go to state 64
    FALSE    shift, and go to state 65
    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 66

    expression           go to state 67
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 38

   26 relation_expr: TRUE .

    $default  reduce using rule 26 (relation_expr)


State 39

   27 relation_expr: FALSE .

    $default  reduce using rule 27 (relation_expr)


State 40

   48 term: IDENT . L_PAREN expression R_PAREN
   55 var: IDENT .
   56    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 59
    L_PAREN           shift, and go to state 68

    $default  reduce using rule 55 (var)


State 41

   49 term: NUMBER .

    $default  reduce using rule 49 (term)


State 42

   52 term: SUB . NUMBER
   53     | SUB . var
   54     | SUB . L_PAREN expressions R_PAREN

    IDENT    shift, and go to state 29
    NUMBER   shift, and go to state 69
    L_PAREN  shift, and go to state 70

    var  go to state 71


State 43

   28 relation_expr: L_PAREN . bool_expr R_PAREN
   51 term: L_PAREN . expressions R_PAREN

    NOT      shift, and go to state 37
    TRUE     shift, and go to state 38
    FALSE    shift, and go to state 39
    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 43
    ";"      shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    bool_expr            go to state 72
    relation_and_expr    go to state 45
    relation_expr        go to state 46
    expression           go to state 73
    expressions          go to state 74
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50
    epsilon              go to state 75


State 44

   13 statement: IF bool_expr . THEN statements ENDIF
   14          | IF bool_expr . THEN statements ELSE statements ENDIF

    THEN  shift, and go to state 76


State 45

   21 bool_expr: relation_and_expr .
   22          | relation_and_expr . OR relation_and_expr

    OR  shift, and go to state 77

    $default  reduce using rule 21 (bool_expr)


State 46

   23 relation_and_expr: relation_expr .
   24                  | relation_expr . AND relation_expr

    AND  shift, and go to state 78

    $default  reduce using rule 23 (relation_and_expr)


State 47

   25 relation_expr: expression . comp expression

    NEQ  shift, and go to state 79
    EQ   shift, and go to state 80
    GTE  shift, and go to state 81
    GT   shift, and go to state 82
    LTE  shift, and go to state 83
    LT   shift, and go to state 84

    comp  go to state 85


State 48

   39 expression: multiplicative_expr .
   40           | multiplicative_expr . SUB multiplicative_expr
   41           | multiplicative_expr . ADD multiplicative_expr

    SUB  shift, and go to state 86
    ADD  shift, and go to state 87

    $default  reduce using rule 39 (expression)


State 49

   44 multiplicative_expr: term .
   45                    | term . MOD term
   46                    | term . DIV term
   47                    | term . MULT term

    MOD   shift, and go to state 88
    DIV   shift, and go to state 89
    MULT  shift, and go to state 90

    $default  reduce using rule 44 (multiplicative_expr)


State 50

   50 term: var .

    $default  reduce using rule 50 (term)


State 51

   15 statement: WHILE bool_expr . BEGINLOOP statements ENDLOOP

    BEGINLOOP  shift, and go to state 91


State 52

   16 statement: DO BEGINLOOP . statements ENDLOOP WHILE bool_expr

    IF        shift, and go to state 22
    WHILE     shift, and go to state 23
    DO        shift, and go to state 24
    CONTINUE  shift, and go to state 25
    READ      shift, and go to state 26
    WRITE     shift, and go to state 27
    RETURN    shift, and go to state 28
    IDENT     shift, and go to state 29
    ";"       shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    statements  go to state 92
    statement   go to state 31
    var         go to state 32
    epsilon     go to state 33


State 53

   57 vars: var . COMMA vars

    COMMA  shift, and go to state 93


State 54

   17 statement: READ vars .

    $default  reduce using rule 17 (statement)


State 55

   58 vars: epsilon .

    $default  reduce using rule 58 (vars)


State 56

   18 statement: WRITE vars .

    $default  reduce using rule 18 (statement)


State 57

   51 term: L_PAREN . expressions R_PAREN

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57
    ";"      shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    expression           go to state 94
    expressions          go to state 74
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50
    epsilon              go to state 75


State 58

   20 statement: RETURN expression .

    $default  reduce using rule 20 (statement)


State 59

   56 var: IDENT L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    expression           go to state 95
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 60

   10 statements: statement SEMICOLON . statements

    IF        shift, and go to state 22
    WHILE     shift, and go to state 23
    DO        shift, and go to state 24
    CONTINUE  shift, and go to state 25
    READ      shift, and go to state 26
    WRITE     shift, and go to state 27
    RETURN    shift, and go to state 28
    IDENT     shift, and go to state 29
    ";"       shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    statements  go to state 96
    statement   go to state 31
    var         go to state 32
    epsilon     go to state 33


State 61

   12 statement: var ASSIGN . expression

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    expression           go to state 97
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 62

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations SEMICOLON END_PARAMS BEGIN_LOCALS . declarations SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    IDENT  shift, and go to state 12
    ";"    shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    declarations  go to state 98
    declaration   go to state 14
    epsilon       go to state 15


State 63

    8 declaration: IDENT COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 99


State 64

   30 relation_expr: NOT TRUE .

    $default  reduce using rule 30 (relation_expr)


State 65

   31 relation_expr: NOT FALSE .

    $default  reduce using rule 31 (relation_expr)


State 66

   32 relation_expr: NOT L_PAREN . bool_expr R_PAREN
   51 term: L_PAREN . expressions R_PAREN

    NOT      shift, and go to state 37
    TRUE     shift, and go to state 38
    FALSE    shift, and go to state 39
    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 43
    ";"      shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    bool_expr            go to state 100
    relation_and_expr    go to state 45
    relation_expr        go to state 46
    expression           go to state 73
    expressions          go to state 74
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50
    epsilon              go to state 75


State 67

   29 relation_expr: NOT expression . comp expression

    NEQ  shift, and go to state 79
    EQ   shift, and go to state 80
    GTE  shift, and go to state 81
    GT   shift, and go to state 82
    LTE  shift, and go to state 83
    LT   shift, and go to state 84

    comp  go to state 101


State 68

   48 term: IDENT L_PAREN . expression R_PAREN

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    expression           go to state 102
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 69

   52 term: SUB NUMBER .

    $default  reduce using rule 52 (term)


State 70

   54 term: SUB L_PAREN . expressions R_PAREN

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57
    ";"      shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    expression           go to state 94
    expressions          go to state 103
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50
    epsilon              go to state 75


State 71

   53 term: SUB var .

    $default  reduce using rule 53 (term)


State 72

   28 relation_expr: L_PAREN bool_expr . R_PAREN

    R_PAREN  shift, and go to state 104


State 73

   25 relation_expr: expression . comp expression
   42 expressions: expression . COMMA expressions

    COMMA  shift, and go to state 105
    NEQ    shift, and go to state 79
    EQ     shift, and go to state 80
    GTE    shift, and go to state 81
    GT     shift, and go to state 82
    LTE    shift, and go to state 83
    LT     shift, and go to state 84

    comp  go to state 85


State 74

   51 term: L_PAREN expressions . R_PAREN

    R_PAREN  shift, and go to state 106


State 75

   43 expressions: epsilon .

    $default  reduce using rule 43 (expressions)


State 76

   13 statement: IF bool_expr THEN . statements ENDIF
   14          | IF bool_expr THEN . statements ELSE statements ENDIF

    IF        shift, and go to state 22
    WHILE     shift, and go to state 23
    DO        shift, and go to state 24
    CONTINUE  shift, and go to state 25
    READ      shift, and go to state 26
    WRITE     shift, and go to state 27
    RETURN    shift, and go to state 28
    IDENT     shift, and go to state 29
    ";"       shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    statements  go to state 107
    statement   go to state 31
    var         go to state 32
    epsilon     go to state 33


State 77

   22 bool_expr: relation_and_expr OR . relation_and_expr

    NOT      shift, and go to state 37
    TRUE     shift, and go to state 38
    FALSE    shift, and go to state 39
    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 43

    relation_and_expr    go to state 108
    relation_expr        go to state 46
    expression           go to state 47
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 78

   24 relation_and_expr: relation_expr AND . relation_expr

    NOT      shift, and go to state 37
    TRUE     shift, and go to state 38
    FALSE    shift, and go to state 39
    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 43

    relation_expr        go to state 109
    expression           go to state 47
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 79

   34 comp: NEQ .

    $default  reduce using rule 34 (comp)


State 80

   33 comp: EQ .

    $default  reduce using rule 33 (comp)


State 81

   38 comp: GTE .

    $default  reduce using rule 38 (comp)


State 82

   36 comp: GT .

    $default  reduce using rule 36 (comp)


State 83

   37 comp: LTE .

    $default  reduce using rule 37 (comp)


State 84

   35 comp: LT .

    $default  reduce using rule 35 (comp)


State 85

   25 relation_expr: expression comp . expression

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    expression           go to state 110
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 86

   40 expression: multiplicative_expr SUB . multiplicative_expr

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    multiplicative_expr  go to state 111
    term                 go to state 49
    var                  go to state 50


State 87

   41 expression: multiplicative_expr ADD . multiplicative_expr

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    multiplicative_expr  go to state 112
    term                 go to state 49
    var                  go to state 50


State 88

   45 multiplicative_expr: term MOD . term

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    term  go to state 113
    var   go to state 50


State 89

   46 multiplicative_expr: term DIV . term

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    term  go to state 114
    var   go to state 50


State 90

   47 multiplicative_expr: term MULT . term

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    term  go to state 115
    var   go to state 50


State 91

   15 statement: WHILE bool_expr BEGINLOOP . statements ENDLOOP

    IF        shift, and go to state 22
    WHILE     shift, and go to state 23
    DO        shift, and go to state 24
    CONTINUE  shift, and go to state 25
    READ      shift, and go to state 26
    WRITE     shift, and go to state 27
    RETURN    shift, and go to state 28
    IDENT     shift, and go to state 29
    ";"       shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    statements  go to state 116
    statement   go to state 31
    var         go to state 32
    epsilon     go to state 33


State 92

   16 statement: DO BEGINLOOP statements . ENDLOOP WHILE bool_expr

    ENDLOOP  shift, and go to state 117


State 93

   57 vars: var COMMA . vars

    IDENT  shift, and go to state 29
    ";"    shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    var      go to state 53
    vars     go to state 118
    epsilon  go to state 55


State 94

   42 expressions: expression . COMMA expressions

    COMMA  shift, and go to state 105


State 95

   56 var: IDENT L_SQUARE_BRACKET expression . R_SQUARE_BRACKET

    R_SQUARE_BRACKET  shift, and go to state 119


State 96

   10 statements: statement SEMICOLON statements .

    $default  reduce using rule 10 (statements)


State 97

   12 statement: var ASSIGN expression .

    $default  reduce using rule 12 (statement)


State 98

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations SEMICOLON END_PARAMS BEGIN_LOCALS declarations . SEMICOLON END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 120


State 99

    8 declaration: IDENT COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 121


State 100

   32 relation_expr: NOT L_PAREN bool_expr . R_PAREN

    R_PAREN  shift, and go to state 122


State 101

   29 relation_expr: NOT expression comp . expression

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57

    expression           go to state 123
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50


State 102

   48 term: IDENT L_PAREN expression . R_PAREN

    R_PAREN  shift, and go to state 124


State 103

   54 term: SUB L_PAREN expressions . R_PAREN

    R_PAREN  shift, and go to state 125


State 104

   28 relation_expr: L_PAREN bool_expr R_PAREN .

    $default  reduce using rule 28 (relation_expr)


State 105

   42 expressions: expression COMMA . expressions

    IDENT    shift, and go to state 40
    NUMBER   shift, and go to state 41
    SUB      shift, and go to state 42
    L_PAREN  shift, and go to state 57
    ";"      shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    expression           go to state 94
    expressions          go to state 126
    multiplicative_expr  go to state 48
    term                 go to state 49
    var                  go to state 50
    epsilon              go to state 75


State 106

   51 term: L_PAREN expressions R_PAREN .

    $default  reduce using rule 51 (term)


State 107

   13 statement: IF bool_expr THEN statements . ENDIF
   14          | IF bool_expr THEN statements . ELSE statements ENDIF

    ENDIF  shift, and go to state 127
    ELSE   shift, and go to state 128


State 108

   22 bool_expr: relation_and_expr OR relation_and_expr .

    $default  reduce using rule 22 (bool_expr)


State 109

   24 relation_and_expr: relation_expr AND relation_expr .

    $default  reduce using rule 24 (relation_and_expr)


State 110

   25 relation_expr: expression comp expression .

    $default  reduce using rule 25 (relation_expr)


State 111

   40 expression: multiplicative_expr SUB multiplicative_expr .

    $default  reduce using rule 40 (expression)


State 112

   41 expression: multiplicative_expr ADD multiplicative_expr .

    $default  reduce using rule 41 (expression)


State 113

   45 multiplicative_expr: term MOD term .

    $default  reduce using rule 45 (multiplicative_expr)


State 114

   46 multiplicative_expr: term DIV term .

    $default  reduce using rule 46 (multiplicative_expr)


State 115

   47 multiplicative_expr: term MULT term .

    $default  reduce using rule 47 (multiplicative_expr)


State 116

   15 statement: WHILE bool_expr BEGINLOOP statements . ENDLOOP

    ENDLOOP  shift, and go to state 129


State 117

   16 statement: DO BEGINLOOP statements ENDLOOP . WHILE bool_expr

    WHILE  shift, and go to state 130


State 118

   57 vars: var COMMA vars .

    $default  reduce using rule 57 (vars)


State 119

   56 var: IDENT L_SQUARE_BRACKET expression R_SQUARE_BRACKET .

    $default  reduce using rule 56 (var)


State 120

    4 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS declarations SEMICOLON END_PARAMS BEGIN_LOCALS declarations SEMICOLON . END_LOCALS BEGIN_BODY statements SEMICOLON END_BODY

    END_LOCALS  shift, and go to state 131


State 121

    8 declaration: IDENT COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 132


State 122

   32 relation_expr: NOT L_PAREN bool_expr R_PAREN .

    $default  reduce using rule 32 (relation_expr)


State 123

   29 relation_expr: NOT expression comp expression .

    $default  reduce using rule 29 (relation_expr)


State 124

   48 term: IDENT L_PAREN expression R_PAREN .

    $default  reduce using rule 48 (term)


State 125

   54 term: SUB L_PAREN expressions R_PAREN .

    $default  reduce using rule 54 (term)


State 126

   42 expressions: expression COMMA expressions .

    $default  reduce using rule 42 (expressions)


State 127

   13 statement: IF bool_expr THEN statements ENDIF .

    $default  reduce using rule 13 (statement)


State 128

   14 statement: IF bool_expr THEN statements ELSE . statements ENDIF

    IF        shift, and go to state 22
    WHILE     shift, and go to state 23
    DO        shift, and go to state 24
    CONTINUE  shift, and go to state 25
    READ      shift, and go to state 26
    WRITE     shift, and go to state 27
    RETURN    shift, and go to state 28
    IDENT     shift, and go to state 29
    ";"       shift, and go to state 2

    $default  reduce using rule 59 (epsilon)

    statements  go to state 133
    statement   go to state 31
    var         go to state 32
    epsilon     go to state 33


State 129

   15 statement: WHILE bool_expr BEGINLOOP statements ENDLOOP .

    $default  reduce using rule 15 (statement)


State 130

   16 statement: DO BEGINLOOP statements ENDLOOP WHILE . bool_expr
